# py-toml10n

./: .gitignor  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/py_toml10n.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/toml10n/: __init__.py  manager.py
tests/: test_manager.py
