[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-toml10n"
version = "0.1.1"
description = "Simple TOML-based localization manager"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["localization", "l10n"]

[project.urls]
Repository = "https://github.com/Pon4ick/py-toml10n"

[tool.setuptools.packages.find]
where = ["src"]